--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^3.10.0",
+    "gulp-concat": "^2.6.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1"
   },
-  "devDependencies": {
+  "dependencies": {
+    "hamburgers": "^1.1.3",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
   }
