--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "habr",
+  "name": "start",
   "version": "1.0.0",
   "description": "",
-  "author": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "AlexKa",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
-    "gulp-watch": "^5.0.1"
+    "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
-    "hamburgers": "^1.1.3",
     "jquery": "^3.3.1",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
   }
 }
